crates/toml_edit/tests/snapshots/invalid/string/bad-multiline.stderr
TOML parse error at line 2, column 8
  |
2 | second line"
  |        ^
key with no value, expected `=`
